force-app/main/default/objects/Template_Task__c/Template_Task__c.object-meta.xml
<CustomObject>
    <description>Represents a predefined task that is associated with a template. These tasks serve as a blueprint for the tasks that should be completed as part of an onboarding process.</description>
    <label>Template Task</label>
    <nameField>
        <label>Template Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Template Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>