force-app/main/default/objects/Template_Task__c/fields/Task_Description__c.field-meta.xml
<CustomField>
    <fullName>Task_Description__c</fullName>
    <description>Rich Text Area for tasks to be completed as part of the onboarding process.</description>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>