force-app/main/default/objects/Template_Task__c/fields/Task_Relative_Days_To_Complete__c.field-meta.xml
<CustomField>
    <fullName>Task_Relative_Days_To_Complete__c</fullName>
    <description>Number field to capture how many days it takes to complete the task.</description>
    <label>Relative Days To Complete</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>