force-app/main/default/objects/Template_Task__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <description>This Master-Detail relationship establishes Template as the master object and Template Task as the detail object. With this configuration, any Template Task is directly associated with one, and only one, Template.</description>
    <label>Template</label>
    <referenceTo>Template__c</referenceTo>
    <relationshipLabel>Template Tasks</relationshipLabel>
    <relationshipName>Template_Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>